--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  google_maps_flutter: 2.2.8
+  flutter_polyline_points: ^2.0.0
+  location: ^5.0.3
+  http: 1.1.0
+  dio: ^5.4.1
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +66,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - lib/images/
+    - lib/images/
+    - assets/user.png
+    - assets/marker3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
