--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: 1.1.0
   dio: ^5.4.1
   geolocator: ^11.0.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +68,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/
-    - assets/user.png
-    - assets/marker3.png
+    - assets/icons/
+    - assets/images/user.png
+    - assets/images/marker3.png
+    - assets/images/logo3.png
+    - assets/images/logo1.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
